--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -37,6 +37,7 @@ table {
     border-spacing: 0;
 }
 
+/* Basic */
 @-ms-viewport { width: device-width; }
 
 @media screen and (max-width: 480px) {
@@ -57,6 +58,7 @@ body.is-preload * {
     transition: none !important;
 }
 
+/* Type */
 @media screen and (max-width: 1680px) { html { font-size: 12pt; } }
 @media screen and (max-width: 736px) { html { font-size: 11pt; } }
 @media screen and (max-width: 360px) { html { font-size: 10pt; } }
@@ -147,6 +149,7 @@ hr {
 .align-center { text-align: center; }
 .align-right { text-align: right; }
 
+/* Form */
 form {
     margin: 0 0 2rem;
 }
@@ -196,4 +199,55 @@ label {
     line-height: 1.5;
     margin: 0 0 1rem;
     text-transform: uppercase;
+}
+
+input[type="text"],
+input[type="password"],
+input[type="email"],
+input[type="tel"],
+select,
+textarea {
+    appearance: none;
+    transition: border-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out, background-color 0.2s ease-in-out;
+    background-color: transparent;
+    border-radius: 4px;
+    border: solid 1px #ffffff;
+    color: inherit;
+    display: block;
+    outline: 0;
+    padding: 0 1rem;
+    width: 100%;
+}
+
+input[type="text"]:invalid,
+input[type="password"]:invalid,
+input[type="email"]:invalid,
+input[type="tel"]:invalid,
+select:invalid,
+textarea:invalid {
+    box-shadow: none;
+}
+
+input[type="text"]:focus,
+input[type="password"]:focus,
+input[type="email"]:focus,
+input[type="tel"]:focus,
+select:focus,
+textarea:focus {
+    background: rgba(255, 255, 255, 0.075);
+    border-color: #ffffff;
+    box-shadow: 0 0 0 1px #ffffff;
+}
+
+select {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' preserveAspectRatio='none' viewBox='0 0 40 40'%3E%3Cpolygon points='12,12 28,12 20,24' fill='rgba(255, 255, 255, 0.5)' /%3E%3C/svg%3E");
+    background-position: right 1rem center;
+    background-repeat: no-repeat;
+    background-size: 8px;
+    padding-right: 2rem;
+}
+
+select option {
+    background-color: #fff;
+    color: #000;
 }
