--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,56 +1,23 @@
 @import url(design.css);
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300italic,600italic,300,600");
 
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+/* Reset */
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
     border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
 }
 
-article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
-    display: block;
-}
-
-body {
-    line-height: 1;
-    background: #1b1f22;
-    -webkit-text-size-adjust: none;
-}
-
-ol, ul {
-    list-style: none;
-}
-
-blockquote, q {
-    quotes: none;
-}
-
-blockquote:before, blockquote:after, q:before, q:after {
-    content: '';
-}
-
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
-}
-
-/* Basic */
-@-ms-viewport { width: device-width; }
-
-@media screen and (max-width: 480px) {
-    html, body { min-width: 320px; }
-}
-
-html {
-    box-sizing: border-box;
+html, body {
     font-size: 16pt;
-}
-
-*, *:before, *:after {
-    box-sizing: inherit;
+    line-height: 1.65;
+    font-family: "Source Sans Pro", sans-serif;
+    font-weight: 300;
+    color: #fff;
+    background: #1b1f22;
 }
 
 body.is-preload * {
@@ -58,196 +25,126 @@ body.is-preload * {
     transition: none !important;
 }
 
-/* Type */
+/* Responsive font sizes */
 @media screen and (max-width: 1680px) { html { font-size: 12pt; } }
 @media screen and (max-width: 736px) { html { font-size: 11pt; } }
 @media screen and (max-width: 360px) { html { font-size: 10pt; } }
 
-body, input, select, textarea {
-    color: #ffffff;
-    font-family: "Source Sans Pro", sans-serif;
-    font-weight: 300;
-    font-size: 1rem;
-    line-height: 1.65;
-}
-
-a {
-    transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
-    border-bottom: dotted 1px rgba(255, 255, 255, 0.5);
-    text-decoration: none;
-    color: inherit;
-}
-
-a:hover { border-bottom-color: transparent; }
-
-strong, b { color: #ffffff; font-weight: 600; }
-em, i { font-style: italic; }
-
-p { margin: 0 0 2rem; }
-
+/* Typography */
 h1, h2, h3, h4, h5, h6 {
-    color: #ffffff;
+    color: #fff;
     font-weight: 600;
-    line-height: 1.5;
-    margin: 0 0 1rem;
+    margin-bottom: 1rem;
     text-transform: uppercase;
     letter-spacing: 0.2rem;
 }
 
-h1 { font-size: 2.25rem; line-height: 1.3; letter-spacing: 0.5rem; }
-h2 { font-size: 1.5rem; line-height: 1.4; letter-spacing: 0.5rem; }
+h1 { font-size: 2.25rem; }
+h2 { font-size: 1.5rem; }
 h3 { font-size: 1rem; }
 h4 { font-size: 0.8rem; }
 h5 { font-size: 0.7rem; }
 h6 { font-size: 0.6rem; }
 
-@media screen and (max-width: 736px) {
-    h1 { font-size: 1.75rem; line-height: 1.4; }
-    h2 { font-size: 1.25em; line-height: 1.5; }
+p {
+    margin-bottom: 2rem;
 }
 
-sub { font-size: 0.8rem; position: relative; top: 0.5rem; }
-sup { font-size: 0.8rem; position: relative; top: -0.5rem; }
-
-blockquote {
-    border-left: solid 4px #ffffff;
-    font-style: italic;
-    margin: 0 0 2rem;
-    padding: 0.5rem 0 0.5rem 2rem;
+a {
+    text-decoration: none;
+    color: inherit;
+    border-bottom: 1px dotted rgba(255, 255, 255, 0.5);
+    transition: color 0.2s, background-color 0.2s, border-bottom-color 0.2s;
 }
 
-code {
-    background: rgba(255, 255, 255, 0.075);
-    border-radius: 4px;
-    font-family: "Courier New", monospace;
-    font-size: 0.9rem;
-    margin: 0 0.25rem;
-    padding: 0.25rem 0.65rem;
-}
-
-pre {
-    -webkit-overflow-scrolling: touch;
-    font-family: "Courier New", monospace;
-    font-size: 0.9rem;
-    margin: 0 0 2rem;
-}
-
-pre code {
-    display: block;
-    line-height: 1.75;
-    padding: 1rem 1.5rem;
-    overflow-x: auto;
-}
-
-hr {
-    border: 0;
-    border-bottom: solid 1px #ffffff;
-    margin: 2.75rem 0;
-}
-
-.align-left { text-align: left; }
-.align-center { text-align: center; }
-.align-right { text-align: right; }
+a:hover { border-bottom-color: transparent; }
 
 /* Form */
 form {
-    margin: 0 0 2rem;
+    margin-bottom: 2rem;
 }
 
-form > :last-child { margin-bottom: 0; }
-
-form > .fields {
+form .fields {
     display: flex;
     flex-wrap: wrap;
-    width: calc(100% + 3rem);
     margin: -1.5rem 0 2rem -1.5rem;
 }
 
-form > .fields > .field {
-    flex-grow: 0;
-    flex-shrink: 0;
+form .field {
     padding: 1.5rem 0 0 1.5rem;
     width: calc(100% - 1.5rem);
 }
 
-form > .fields > .field.half { width: calc(50% - 0.75rem); }
-form > .fields > .field.third { width: calc(100% / 3 - 0.5rem); }
-form > .fields > .field.quarter { width: calc(25% - 0.375rem); }
-
-@media screen and (max-width: 480px) {
-    form > .fields {
-        width: calc(100% + 3rem);
-        margin: -1.5rem 0 2rem -1.5rem;
-    }
-    form > .fields > .field {
-        padding: 1.5rem 0 0 1.5rem;
-        width: calc(100% - 1.5rem);
-    }
-    form > .fields > .field.half,
-    form > .fields > .field.third,
-    form > .fields > .field.quarter {
-        width: calc(100% - 1.5rem);
-    }
+form input[type="text"],
+form input[type="password"],
+form input[type="email"],
+form select,
+form textarea {
+    appearance: none;
+    border: 1px solid #fff;
+    background: transparent;
+    color: inherit;
+    padding: 0 1rem;
+    border-radius: 4px;
+    outline: none;
+    width: 100%;
+    transition: border-color 0.2s, box-shadow 0.2s, background-color 0.2s;
 }
 
-label {
-    color: #ffffff;
-    display: block;
+form input:focus,
+form textarea:focus,
+form select:focus {
+    background: rgba(255, 255, 255, 0.075);
+    border-color: #fff;
+    box-shadow: 0 0 0 1px #fff;
+}
+
+/* Buttons */
+button, .button, input[type="submit"], input[type="reset"], input[type="button"] {
+    appearance: none;
+    border: 0;
+    border-radius: 4px;
+    background: transparent;
+    color: #fff !important;
     font-size: 0.8rem;
     font-weight: 300;
-    letter-spacing: 0.2rem;
-    line-height: 1.5;
-    margin: 0 0 1rem;
+    line-height: 2.75rem;
+    padding: 0 1.25rem;
     text-transform: uppercase;
+    cursor: pointer;
+    transition: background-color 0.2s, color 0.2s;
+    text-align: center;
 }
 
-input[type="text"],
-input[type="password"],
-input[type="email"],
-input[type="tel"],
-select,
-textarea {
-    appearance: none;
-    transition: border-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out, background-color 0.2s ease-in-out;
-    background-color: transparent;
-    border-radius: 4px;
-    border: solid 1px #ffffff;
-    color: inherit;
-    display: block;
-    outline: 0;
-    padding: 0 1rem;
-    width: 100%;
-}
-
-input[type="text"]:invalid,
-input[type="password"]:invalid,
-input[type="email"]:invalid,
-input[type="tel"]:invalid,
-select:invalid,
-textarea:invalid {
-    box-shadow: none;
-}
-
-input[type="text"]:focus,
-input[type="password"]:focus,
-input[type="email"]:focus,
-input[type="tel"]:focus,
-select:focus,
-textarea:focus {
+button:hover,
+input[type="submit"]:hover,
+input[type="reset"]:hover {
     background: rgba(255, 255, 255, 0.075);
-    border-color: #ffffff;
-    box-shadow: 0 0 0 1px #ffffff;
 }
 
-select {
-    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' preserveAspectRatio='none' viewBox='0 0 40 40'%3E%3Cpolygon points='12,12 28,12 20,24' fill='rgba(255, 255, 255, 0.5)' /%3E%3C/svg%3E");
-    background-position: right 1rem center;
-    background-repeat: no-repeat;
-    background-size: 8px;
-    padding-right: 2rem;
+button:active,
+input[type="submit"]:active,
+input[type="reset"]:active {
+    background: rgba(255, 255, 255, 0.175);
 }
 
-select option {
-    background-color: #fff;
-    color: #000;
+/* Misc */
+hr {
+    border: 0;
+    border-bottom: 1px solid #fff;
+    margin: 2.75rem 0;
+}
+
+/* Images */
+.image {
+    position: relative;
+    display: inline-block;
+    border: 0;
+    border-radius: 4px;
+}
+
+.image img {
+    border-radius: 4px;
+    display: block;
+    width: 100%;
 }
