--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,425 +7,261 @@ small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, l
 form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside,
 canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby,
 section, summary, time, mark, audio, video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
+  margin: 0; padding: 0; border: 0; font-size: 100%; font: inherit; vertical-align: baseline;
 }
 
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
-    display: block;
+  display: block;
 }
 
 body {
-    line-height: 1;
-    background: #1b1f22;
-    -webkit-text-size-adjust: none;
+  line-height: 1; background: #1b1f22; -webkit-text-size-adjust: none;
 }
 
-ol, ul {
-    list-style: none;
-}
+ol, ul { list-style: none; }
 
-blockquote, q {
-    quotes: none;
-}
-blockquote:before, blockquote:after, q:before, q:after {
-    content: '';
-}
+blockquote, q { quotes: none; }
+blockquote:before, blockquote:after, q:before, q:after { content: ''; }
 
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
-}
+table { border-collapse: collapse; border-spacing: 0; }
 
 input, select, textarea {
-    -moz-appearance: none;
-    -webkit-appearance: none;
-    -ms-appearance: none;
-    appearance: none;
+  -moz-appearance: none; -webkit-appearance: none; -ms-appearance: none; appearance: none;
 }
 
-@-ms-viewport {
-    width: device-width;
-}
+@-ms-viewport { width: device-width; }
 
 @media screen and (max-width: 480px) {
-    html, body {
-        min-width: 320px;
-    }
+  html, body { min-width: 320px; }
 }
 
-html {
-    box-sizing: border-box;
-    font-size: 16pt;
-}
+html { box-sizing: border-box; font-size: 16pt; }
 
-@media screen and (max-width: 1680px) {
-    html {
-        font-size: 12pt;
-    }
-}
-@media screen and (max-width: 736px) {
-    html {
-        font-size: 11pt;
-    }
-}
-@media screen and (max-width: 360px) {
-    html {
-        font-size: 10pt;
-    }
-}
+@media screen and (max-width: 1680px) { html { font-size: 12pt; } }
+@media screen and (max-width: 736px) { html { font-size: 11pt; } }
+@media screen and (max-width: 360px) { html { font-size: 10pt; } }
 
 body, input, select, textarea {
-    color: #fff;
-    font-family: "Source Sans Pro", sans-serif;
-    font-weight: 300;
-    font-size: 1rem;
-    line-height: 1.65;
+  color: #fff; font-family: "Source Sans Pro", sans-serif; font-weight: 300; font-size: 1rem; line-height: 1.65;
 }
 
 a {
-    border-bottom: dotted 1px rgba(255, 255, 255, 0.5);
-    text-decoration: none;
-    color: inherit;
-    transition: color 0.2s, background-color 0.2s, border-bottom-color 0.2s;
+  border-bottom: dotted 1px rgba(255, 255, 255, 0.5); text-decoration: none; color: inherit;
+  transition: color 0.2s, background-color 0.2s, border-bottom-color 0.2s;
 }
-a:hover {
-    border-bottom-color: transparent;
-}
+a:hover { border-bottom-color: transparent; }
 
-strong, b {
-    color: #fff;
-    font-weight: 600;
-}
-em, i {
-    font-style: italic;
-}
+strong, b { color: #fff; font-weight: 600; }
+em, i { font-style: italic; }
 
-p {
-    margin: 0 0 2rem 0;
-}
+p { margin: 0 0 2rem 0; }
 
 h1, h2, h3, h4, h5, h6 {
-    color: #fff;
-    font-weight: 600;
-    line-height: 1.5;
-    margin: 0 0 1rem 0;
-    text-transform: uppercase;
-    letter-spacing: 0.2rem;
+  color: #fff; font-weight: 600; line-height: 1.5; margin: 0 0 1rem 0; text-transform: uppercase; letter-spacing: 0.2rem;
 }
-h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
-    color: inherit;
-    text-decoration: none;
-}
+h1 a, h2 a, h3 a, h4 a, h5 a, h6 a { color: inherit; text-decoration: none; }
 
 h1.major, h2.major, h3.major, h4.major, h5.major, h6.major {
-    border-bottom: solid 1px #fff;
-    width: max-content;
-    padding-bottom: 0.5rem;
-    margin: 0 0 2rem 0;
+  border-bottom: solid 1px #fff; width: max-content; padding-bottom: 0.5rem; margin: 0 0 2rem 0;
 }
 
-h1 {
-    font-size: 2.25rem;
-    letter-spacing: 0.5rem;
-}
-h2 {
-    font-size: 1.5rem;
-    letter-spacing: 0.5rem;
-}
-h3 {
-    font-size: 1rem;
-}
-h4 {
-    font-size: 0.8rem;
-}
-h5 {
-    font-size: 0.7rem;
-}
-h6 {
-    font-size: 0.6rem;
-}
+h1 { font-size: 2.25rem; letter-spacing: 0.5rem; }
+h2 { font-size: 1.5rem; letter-spacing: 0.5rem; }
+h3 { font-size: 1rem; }
+h4 { font-size: 0.8rem; }
+h5 { font-size: 0.7rem; }
+h6 { font-size: 0.6rem; }
 
 @media screen and (max-width: 736px) {
-    h1 {
-        font-size: 1.75rem;
-        line-height: 1.4;
-    }
-    h2 {
-        font-size: 1.25em;
-        line-height: 1.5;
-    }
+  h1 { font-size: 1.75rem; line-height: 1.4; }
+  h2 { font-size: 1.25em; line-height: 1.5; }
 }
 
-sub {
-    font-size: 0.8rem;
-    position: relative;
-    top: 0.5rem;
-}
-sup {
-    font-size: 0.8rem;
-    position: relative;
-    top: -0.5rem;
-}
+sub { font-size: 0.8rem; position: relative; top: 0.5rem; }
+sup { font-size: 0.8rem; position: relative; top: -0.5rem; }
 
 blockquote {
-    border-left: solid 4px #fff;
-    font-style: italic;
-    margin: 0 0 2rem 0;
-    padding: 0.5rem 0 0.5rem 2rem;
+  border-left: solid 4px #fff; font-style: italic; margin: 0 0 2rem 0; padding: 0.5rem 0 0.5rem 2rem;
 }
 
 code {
-    background: rgba(255, 255, 255, 0.075);
-    border-radius: 4px;
-    font-family: "Courier New", monospace;
-    font-size: 0.9rem;
-    margin: 0 0.25rem;
-    padding: 0.25rem 0.65rem;
+  background: rgba(255, 255, 255, 0.075); border-radius: 4px; font-family: "Courier New", monospace; font-size: 0.9rem;
+  margin: 0 0.25rem; padding: 0.25rem 0.65rem;
 }
 
 pre {
-    -webkit-overflow-scrolling: touch;
-    font-family: "Courier New", monospace;
-    font-size: 0.9rem;
-    margin: 0 0 2rem 0;
+  -webkit-overflow-scrolling: touch; font-family: "Courier New", monospace; font-size: 0.9rem; margin: 0 0 2rem 0;
 }
 
 pre code {
-    display: block;
-    line-height: 1.75;
-    padding: 1rem 1.5rem;
-    overflow-x: auto;
+  display: block; line-height: 1.75; padding: 1rem 1.5rem; overflow-x: auto;
 }
 
-hr {
-    border: 0;
-    border-bottom: solid 1px #fff;
-    margin: 2.75rem 0;
-}
+hr { border: 0; border-bottom: solid 1px #fff; margin: 2.75rem 0; }
 
-.align-left {
-    text-align: left;
-}
-.align-center {
-    text-align: center;
-}
-.align-right {
-    text-align: right;
-}
+.align-left { text-align: left; }
+.align-center { text-align: center; }
+.align-right { text-align: right; }
 
 form {
-    margin: 0 0 2rem 0;
+  margin: 0 0 2rem 0;
 }
 
-form>.fields {
-    display: flex;
-    flex-wrap: wrap;
-    width: calc(100% + 3rem);
-    margin: -1.5rem 0 2rem -1.5rem;
+form > .fields {
+  display: flex; flex-wrap: wrap; width: calc(100% + 3rem); margin: -1.5rem 0 2rem -1.5rem;
 }
 
-form>.fields>.field {
-    flex-grow: 0;
-    flex-shrink: 0;
-    padding: 1.5rem 0 0 1.5rem;
-    width: calc(100% - 1.5rem);
+form > .fields > .field {
+  flex-grow: 0; flex-shrink: 0; padding: 1.5rem 0 0 1.5rem; width: calc(100% - 1.5rem);
 }
 
-form>.fields>.field.half {
-    width: calc(50% - 0.75rem);
-}
-form>.fields>.field.third {
-    width: calc(100%/3 - 0.5rem);
-}
-form>.fields>.field.quarter {
-    width: calc(25% - 0.375rem);
-}
+form > .fields > .field.half { width: calc(50% - 0.75rem); }
+form > .fields > .field.third { width: calc(100%/3 - 0.5rem); }
+form > .fields > .field.quarter { width: calc(25% - 0.375rem); }
 
 @media screen and (max-width: 480px) {
-    form>.fields {
-        width: calc(100% + 3rem);
-        margin: -1.5rem 0 2rem -1.5rem;
-    }
-    form>.fields>.field {
-        padding: 1.5rem 0 0 1.5rem;
-        width: calc(100% - 1.5rem);
-    }
-    form>.fields>.field.half {
-        width: 100%;
-    }
-    form>.fields>.field.third {
-        width: 100%;
-    }
-    form>.fields>.field.quarter {
-        width: 100%;
-    }
+  form > .fields { width: calc(100% + 3rem); margin: -1.5rem 0 2rem -1.5rem; }
+  form > .fields > .field { padding: 1.5rem 0 0 1.5rem; width: calc(100% - 1.5rem); }
+  form > .fields > .field.half { width: 100%; }
+  form > .fields > .field.third { width: 100%; }
+  form > .fields > .field.quarter { width: 100%; }
 }
 
 label {
-    color: #fff;
-    display: block;
-    font-size: 0.8rem;
-    font-weight: 300;
-    letter-spacing: 0.2rem;
-    line-height: 1.5;
-    margin: 0 0 1rem 0;
-    text-transform: uppercase;
+  color: #fff; display: block; font-size: 0.8rem; font-weight: 300; letter-spacing: 0.2rem; line-height: 1.5;
+  margin: 0 0 1rem 0; text-transform: uppercase;
 }
 
 input[type="text"], input[type="password"], input[type="email"], input[type="tel"], select, textarea {
-    appearance: none;
-    transition: border-color 0.2s, box-shadow 0.2s, background-color 0.2s;
-    background-color: transparent;
-    border-radius: 4px;
-    border: solid 1px #fff;
-    color: inherit;
-    display: block;
-    outline: 0;
-    padding: 0 1rem;
-    width: 100%;
+  appearance: none; transition: border-color 0.2s, box-shadow 0.2s, background-color 0.2s; background-color: transparent;
+  border-radius: 4px; border: solid 1px #fff; color: inherit; display: block; outline: 0; padding: 0 1rem; width: 100%;
 }
 
 input[type="text"]:invalid, input[type="password"]:invalid, input[type="email"]:invalid, input[type="tel"]:invalid,
-select:invalid, textarea:invalid {
-    box-shadow: none;
-}
+select:invalid, textarea:invalid { box-shadow: none; }
 
 input[type="text"]:focus, input[type="password"]:focus, input[type="email"]:focus, input[type="tel"]:focus, select:focus,
-textarea:focus {
-    background: rgba(255, 255, 255, 0.075);
-    border-color: #fff;
-    box-shadow: 0 0 0 1px #fff;
-}
+textarea:focus { background: rgba(255, 255, 255, 0.075); border-color: #fff; box-shadow: 0 0 0 1px #fff; }
 
 select {
-    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cpath d='M9.4,12.3l10.4,10.4l10.4-10.4c0.2-0.2,0.5-0.4,0.9-0.4
-4c-0.3, 0-0.6-0.1-0.9-0.4L4.3, 17.3c-0.2-0.2-0.4-0.5-0.4-0.9c0-0.4, 0.1-0.6, 0.4-0.9l3.3-3.3c0.2-0.2, 0.5-0.4, 0.9-0.4 S9.1, 12.1, 9.4, 12.3z' fill='%23ffffff'/%3E%3C/svg%3E");
-background-size: 1.25rem; background-repeat: no-repeat; background-position: calc(100% - 1rem) center;
-            height: 2.75rem; padding-right: 2.75rem; text-overflow: ellipsis;
-    }
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cpath d='M9.4,12.3l10.4,10.4l10.4-10.4c0.2-0.2,0.5-0.4,0.9-0.4c0.3,0,0.6,0.1,0.9,0.4l3.3,3.3c0.2,0.2,0.4,0.5,0.4,0.9 c0,0.4-0.1,0.6-0.4,0.9L20.7,31.9c-0.2,0.2-0.5,0.4-0.9,0.4c-0.3,0-0.6-0.1-0.9-0.4L4.3,17.3c-0.2-0.2-0.4-0.5-0.4-0.9 c0-0.4,0.1-0.6,0.4-0.9l3.3-3.3c0.2-0.2,0.5-0.4,0.9-0.4S9.1,12.1,9.4,12.3z' fill='%23ffffff'/%3E%3C/svg%3E");
+  background-size: 1.25rem; background-repeat: no-repeat; background-position: calc(100% - 1rem) center;
+  height: 2.75rem; padding-right: 2.75rem; text-overflow: ellipsis;
+}
 
-    select option {
-        color: #fff; background: #1b1f22;
-    }
+select option {
+  color: #fff; background: #1b1f22;
+}
 
-    select::-ms-expand {
-        display: none;
-    }
+select::-ms-expand {
+  display: none;
+}
 
-    textarea {
-        padding: 0.75rem 1rem;
-    }
+textarea {
+  padding: 0.75rem 1rem;
+}
 
-    input[type="checkbox"], input[type="radio"] {
-        appearance: none; display: block; float: left; margin-right: -2rem; opacity: 0; width: 1rem; z-index: -1;
-    }
+input[type="checkbox"], input[type="radio"] {
+  appearance: none; display: block; float: left; margin-right: -2rem; opacity: 0; width: 1rem; z-index: -1;
+}
 
-    input[type="checkbox"] + label, input[type="radio"] + label {
-        text-decoration: none; user-select: none; color: #fff; cursor: pointer; display: inline-block;
-        font-size: 0.8rem; font-weight: 300; margin: 0 0 0.5rem 0; padding-left: 2.65rem; padding-right: 0.75rem; position: relative;
-    }
+input[type="checkbox"] + label, input[type="radio"] + label {
+  text-decoration: none; user-select: none; color: #fff; cursor: pointer; display: inline-block;
+  font-size: 0.8rem; font-weight: 300; margin: 0 0 0.5rem 0; padding-left: 2.65rem; padding-right: 0.75rem; position: relative;
+}
 
-    input[type="checkbox"] + label:before, input[type="radio"] + label:before {
-        transition: border-color 0.2s, box-shadow 0.2s, background-color 0.2s; border-radius: 4px;
-        border: solid 1px #fff; content: ''; display: inline-block; height: 1.65rem; left: 0;
-        line-height: 1.65rem; position: absolute; text-align: center; top: -0.15rem; width: 1.65rem;
-    }
+input[type="checkbox"] + label:before, input[type="radio"] + label:before {
+  transition: border-color 0.2s, box-shadow 0.2s, background-color 0.2s; border-radius: 4px;
+  border: solid 1px #fff; content: ''; display: inline-block; height: 1.65rem; left: 0;
+  line-height: 1.65rem; position: absolute; text-align: center; top: -0.15rem; width: 1.65rem;
+}
 
-    input[type="checkbox"]:checked + label:before, input[type="radio"]:checked + label:before {
-        background: #fff !important; border-color: #fff !important; color: #1b1f22; content: '\f00c';
-    }
+input[type="checkbox"]:checked + label:before, input[type="radio"]:checked + label:before {
+  background: #fff !important; border-color: #fff !important; color: #1b1f22; content: '\f00c';
+}
 
-    input[type="checkbox"]:focus + label:before, input[type="radio"]:focus + label:before {
-        background: rgba(255, 255, 255, 0.075); border-color: #fff; box-shadow: 0 0 0 1px #fff;
-    }
+input[type="checkbox"]:focus + label:before, input[type="radio"]:focus + label:before {
+  background: rgba(255, 255, 255, 0.075); border-color: #fff; box-shadow: 0 0 0 1px #fff;
+}
 
-    input[type="checkbox"] + label:before {
-        border-radius: 4px;
-    }
+input[type="checkbox"] + label:before {
+  border-radius: 4px;
+}
 
-    input[type="radio"] + label:before {
-        border-radius: 100%;
-    }
+input[type="radio"] + label:before {
+  border-radius: 100%;
+}
 
-    ::placeholder {
-        color: rgba(255, 255, 255, 0.5) !important; opacity: 1.0;
-    }
+::placeholder {
+  color: rgba(255, 255, 255, 0.5) !important; opacity: 1.0;
+}
 
-    .formerize-placeholder {
-        color: rgba(255, 255, 255, 0.5) !important; opacity: 1.0;
-    }
+.formerize-placeholder {
+  color: rgba(255, 255, 255, 0.5) !important; opacity: 1.0;
+}
 
-    /* Box */
-    .box {
-        border-radius: 4px; border: solid 1px #fff; margin-bottom: 2rem; padding: 1.5em;
-    }
+/* Box */
+.box {
+  border-radius: 4px; border: solid 1px #fff; margin-bottom: 2rem; padding: 1.5em;
+}
 
-    .box.alt {
-        border: 0; border-radius: 0; padding: 0;
-    }
+.box.alt {
+  border: 0; border-radius: 0; padding: 0;
+}
 
-    /* Icon */
-    .icon {
-        text-decoration: none; border-bottom: none; position: relative;
-    }
+/* Icon */
+.icon {
+  text-decoration: none; border-bottom: none; position: relative;
+}
 
-    .icon:before {
-        font-family: 'Font Awesome 5 Free'; font-weight: 400; display: inline-block; text-rendering: auto;
-        line-height: 1; transition: 0.2s;
-    }
+.icon:before {
+  font-family: 'Font Awesome 5 Free'; font-weight: 400; display: inline-block; text-rendering: auto; 
+  line-height: 1; transition: 0.2s;
+}
 
-    .icon.solid:before {
-        font-weight: 900;
-    }
+.icon.solid:before {
+  font-weight: 900;
+}
 
-    .icon.brands:before {
-        font-family: 'Font Awesome 5 Brands';
-    }
+.icon.brands:before {
+  font-family: 'Font Awesome 5 Brands';
+}
 
-    /* Image */
-    .image {
-        border-radius: 4px; position: relative;
-    }
+/* Image */
+.image {
+  border-radius: 4px; position: relative;
+}
 
-    .image img {
-        display: block; border-radius: inherit;
-    }
+.image img {
+  display: block; border-radius: inherit;
+}
 
-    .image:before {
-        pointer-events: none; background-image: url("../../images/overlay.png");
-        background-color: rgba(19, 21, 25, 0.5); border-radius: inherit; content: ''; display: block;
-        height: 100%; left: 0; opacity: 0.5; position: absolute; top: 0; width: 100%;
-    }
+.image:before {
+  pointer-events: none; background-image: url("../../images/overlay.png");
+  background-color: rgba(19, 21, 25, 0.5); border-radius: inherit; content: ''; display: block;
+  height: 100%; left: 0; opacity: 0.5; position: absolute; top: 0; width: 100%;
+}
 
-    .image.left, .image.right {
-        max-width: 40%;
-    }
+.image.left, .image.right {
+  max-width: 40%;
+}
 
-    .image.left img, .image.right img {
-        width: 100%;
-    }
+.image.left img, .image.right img {
+  width: 100%;
+}
 
-    .image.fit {
-        display: block; margin: 0 0 2rem; width: 100%;
-    }
+.image.fit {
+  display: block; margin: 0 0 2rem; width: 100%;
+}
 
-    .image.main {
-        display: block; margin: 2.5rem 0; width: 100%;
-    }
+.image.main {
+  display: block; margin: 2.5rem 0; width: 100%;
+}
 
-    @media screen and (max-width: 736px) {
-        .image.main {
-            margin: 2rem 0;
-        }
-    }
+@media screen and (max-width: 736px) {
+  .image.main { margin: 2rem 0; }
+}
 
-    @media screen and (max-width: 480px) {
-        .image.main {
-            margin: 1.5rem 0;
-        }
-    }
+@media screen and (max-width: 480px) {
+  .image.main { margin: 1.5rem 0; }
+}
