--- a/assets/css/design.css
+++ b/assets/css/design.css
@@ -1,3 +1,5 @@
+/* Font Awesome Base Styles */
+
 .fa, .fab, .fad, .fal, .far, .fas {
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
@@ -7,6 +9,9 @@
     text-rendering: auto;
     line-height: 1;
 }
+
+/* Font Sizes */
+
 .fa-lg { font-size: 1.33333em; line-height: .75em; vertical-align: -.0667em; }
 .fa-xs { font-size: .75em; }
 .fa-sm { font-size: .875em; }
@@ -21,12 +26,10 @@
 .fa-9x { font-size: 9em; }
 .fa-10x { font-size: 10em; }
 
+/* Alignments & Spacing */
+
 .fa-fw { text-align: center; width: 1.25em; }
-.fa-ul {
-    list-style-type: none;
-    margin-left: 2.5em;
-    padding-left: 0;
-}
+.fa-ul { list-style-type: none; margin-left: 2.5em; padding-left: 0; }
 .fa-ul > li { position: relative; }
 .fa-li {
     left: -2em;
@@ -36,30 +39,28 @@
     line-height: inherit;
 }
 
-/* Borders and Pulls */
 .fa-border {
     border: .08em solid #eee;
     border-radius: .1em;
     padding: .2em .25em .15em;
 }
-.fa-pull-left, .fa-pull-right {
-    float: left;
-    margin-right: .3em;
+.fa-pull-left, .fa-pull-right { 
+    float: left; 
+    margin-right: .3em; 
 }
-.fa-pull-right {
-    float: right;
-    margin-left: .3em;
+.fa-pull-right { 
+    float: right; 
+    margin-left: .3em; 
 }
-.fa-spin {
-    animation: fa-spin 2s linear infinite;
-}
-.fa-pulse {
-    animation: fa-spin 1s steps(8) infinite;
-}
+
+.fa-spin { animation: fa-spin 2s linear infinite; }
+.fa-pulse { animation: fa-spin 1s steps(8) infinite; }
+
 @keyframes fa-spin {
     0% { transform: rotate(0deg); }
     to { transform: rotate(1turn); }
 }
+
 .fa-rotate-90 { transform: rotate(90deg); }
 .fa-rotate-180 { transform: rotate(180deg); }
 .fa-rotate-270 { transform: rotate(270deg); }
@@ -75,17 +76,14 @@
     vertical-align: middle;
     width: 2.5em;
 }
-.fa-stack-1x, .fa-stack-2x {
-    left: 0;
+.fa-stack-1x { line-height: inherit; }
+.fa-stack-2x {
+    font-size: 2em;
     position: absolute;
     text-align: center;
     width: 100%;
 }
-.fa-stack-1x { line-height: inherit; }
-.fa-stack-2x { font-size: 2em; }
-
 .fa-inverse { color: #fff; }
-
 .sr-only {
     border: 0;
     clip: rect(0, 0, 0, 0);
@@ -104,6 +102,8 @@
     position: static;
     width: auto;
 }
+
+/* Font Faces */
 
 @font-face {
     font-family: "Font Awesome 5 Brands";
