--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -311,7 +311,7 @@ select::-ms-expand {
 
 .image:before {
   pointer-events: none;
-  background-image: url("../../images/overlay.png");
+  background-image: none;
   background-color: rgba(19, 21, 25, 0.5);
   border-radius: 4px;
   content: '';
